# OpenVLA-Project-VIP-Autobots

./: README.md  mycobot.py  openvla.py  run_camera.py  test.py
mycobot-main/: .gitignore  LICENSE.txt  README.md  pyproject.toml
mycobot-main/docs/docs/: ____init_____8py.html  annotated.html  classes.html  classmc280_1_1MC280-members.html  classmc280_1_1MC280.html  classrecorder_1_1Recorder-members.html  classrecorder_1_1Recorder.html  classrecorder_1_1Recorder__coll__graph.map  classrecorder_1_1Recorder__coll__graph.md5  classrecorder_1_1__ConsoleHelper-members.html  classrecorder_1_1__ConsoleHelper.html  classrecorder_1_1__ConsoleHelper__inherit__graph.map  classrecorder_1_1__ConsoleHelper__inherit__graph.md5  classrecorder_1_1__RawInput-members.html  classrecorder_1_1__RawInput.html  classtests_1_1record_1_1Helper-members.html  classtests_1_1record_1_1Helper.html  classtests_1_1record_1_1Helper__inherit__graph.map  classtests_1_1record_1_1Helper__inherit__graph.md5  classtests_1_1record_1_1Raw-members.html  classtests_1_1record_1_1Raw.html  classtests_1_1record_1_1Teaching280-members.html  classtests_1_1record_1_1Teaching280.html  classtests_1_1record_1_1Teaching280__coll__graph.md5  classtests_1_1record_1_1Teaching280__inherit__graph.map  classtests_1_1test__stop_1_1MC280.html  (+44 more)
mycobot-main/src/: manipulator.py  mc280.py  robot.py  utils.py
mycobot-main/tests/: test_camera_to_world.py  test_extrinsics.py  test_findObjectsInWorkspace.py  test_mouse_click.py  test_robot.py  test_transform.py
mycobot-main/utils/: arucoTag.yaml  gripperConfigs.yaml  transforms.yaml
(+70 files in other folders)
