[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mc280"
version = "0.1.0"
description = "Python wrapper for controlling the myCobot 280 arm"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "IVALab"}]
requires-python = ">=3.8"
dependencies = [
    "pymycobot",
    "pybullet",
    "numpy>=2.0",
    "networkx>=2.8",
    "Lie @ git+https://github.com/ivapylibs/Lie.git",
    "readchar",
    "yacs",
    "ivapy @ git+https://github.com/ivapylibs/ivapy.git",
    "camera @ git+https://github.com/ivapylibs/camera",
    "opencv-contrib-python>=4.12.0.88",
]
# A regular pip install of the camera library does not include non-Python source files like oak.yaml.
# setup.py needs to be updated to include those YAML files.

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["mc280"]
include-package-data = true

[tool.setuptools.package-data]
mc280 = [
    "urdf/*.urdf",
    "urdf/*.png",
    "urdf/*.dae",
]

